<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
   
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Desserts" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            	<ImageView android:layout_width="80dp" android:layout_height="80dp"  android:src="@drawable/rasptriffle" android:contentDescription="@string/hello_world"  android:layout_marginLeft="-150dp" android:maxWidth="80dp"/>
            	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"  android:text="@string/raspTrif" android:layout_marginTop="5dp" android:layout_marginLeft="-120dp" android:textStyle="bold"/>
            	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hello_world" android:layout_marginLeft="-100dp" android:layout_marginTop="65dp"/>      
                <EditText android:layout_height="wrap_content" android:layout_width="50dp" android:inputType="number" android:layout_marginLeft="0dp" android:layout_marginTop="60dp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
                <ImageView android:layout_width="80dp" android:layout_height="80dp"  android:src="@drawable/caramelcustard" android:contentDescription="@string/hello_world" android:layout_marginLeft="-150dp" android:maxWidth="80dp"/>
            	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/caramelCustard" android:layout_marginTop="5dp" android:layout_marginLeft="-120dp" android:textStyle="bold"/>
            	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hello_world" android:layout_marginLeft="-100dp" android:layout_marginTop="65dp"/>
                <EditText android:layout_height="wrap_content" android:layout_width="50dp" android:inputType="number" android:layout_marginLeft="0dp" android:layout_marginTop="60dp"/>        
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
                <ImageView android:layout_width="80dp" android:layout_height="80dp"  android:src="@drawable/applepie" android:contentDescription="@string/hello_world" android:layout_marginLeft="-150dp" android:maxWidth="80dp"/>
            	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/applePie" android:layout_marginTop="5dp" android:layout_marginLeft="-120dp" android:textStyle="bold"/>
            	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hello_world" android:layout_marginLeft="-100dp" android:layout_marginTop="65dp"/>
            	<EditText android:layout_height="wrap_content" android:layout_width="50dp" android:inputType="number" android:layout_marginLeft="0dp" android:layout_marginTop="60dp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
                <ImageView android:layout_width="80dp" android:layout_height="80dp"  android:src="@drawable/chocmoussecake" android:contentDescription="@string/hello_world" android:layout_marginLeft="-150dp" android:maxWidth="80dp"/>
        	    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/chocMousse" android:layout_marginTop="5dp" android:layout_marginLeft="-120dp" android:textStyle="bold"/>
        	    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hello_world" android:layout_marginLeft="-100dp" android:layout_marginTop="65dp"/>
            	<EditText android:layout_height="wrap_content" android:layout_width="50dp" android:inputType="number" android:layout_marginLeft="0dp" android:layout_marginTop="60dp"/>
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
                
            <Button android:id="@+id/button1" android:layout_width="wrap_content" android:layout_height="50dp" android:text="@string/confirm" android:background="#85d8d8d8" android:layout_marginLeft="100dp"/>        
        </TableRow>	
        	
       
    </TableLayout>
	
</ScrollView>
