<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
   
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainCourse" >
    
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="150dp" >
            	<ImageView android:layout_width="80dp" android:layout_height="80dp" android:src="@drawable/eggsaladsandwch" android:contentDescription="@string/hello_world" android:layout_marginLeft="-50dp"/>
            	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eggSaladSandwich" android:layout_marginTop="5dp" android:layout_marginLeft="-30dp" android:textStyle="bold"/>
            	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hello_world" android:layout_marginLeft="-100dp" android:layout_marginTop="65dp"/>
            	<EditText android:layout_height="wrap_content" android:layout_width="40dp" android:inputType="number" android:layout_marginLeft="0dp" android:layout_marginTop="60dp" android:id="@+id/quantMcESS"/>
            	</TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
                <ImageView android:layout_width="80dp" android:layout_height="80dp" android:src="@drawable/spinchmushrmlasagna" android:contentDescription="@string/hello_world" android:layout_marginLeft="-50dp"/>
            	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/spinachMushroom" android:layout_marginTop="5dp" android:layout_marginLeft="-30dp" android:textStyle="bold"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hello_world" android:layout_marginLeft="-100dp" android:layout_marginTop="65dp"/>
            	<EditText android:id="@+id/quantMcML" android:layout_height="wrap_content" android:inputType="number" android:layout_marginLeft="0dp" android:layout_marginTop="60dp" android:layout_width="40dp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
                <ImageView android:layout_width="80dp" android:layout_height="80dp"  android:src="@drawable/vegquiche" android:contentDescription="@string/hello_world" android:layout_marginLeft="-50dp"/>
            	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/countryQuiche" android:layout_marginTop="5dp" android:layout_marginLeft="-30dp" android:textStyle="bold"/>
            	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hello_world" android:layout_marginLeft="-100dp" android:layout_marginTop="65dp"/>
            	<EditText android:id="@+id/quantMcVCQ" android:layout_height="wrap_content" android:inputType="number" android:layout_marginLeft="0dp" android:layout_marginTop="60dp" android:layout_width="40dp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
                <ImageView android:layout_width="80dp" android:layout_height="80dp"  android:src="@drawable/spicelambburger" android:contentDescription="@string/hello_world" android:layout_marginLeft="-50dp"/>
        	    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lambBurger" android:layout_marginTop="5dp" android:layout_marginLeft="-30dp" android:textStyle="bold"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hello_world" android:layout_marginLeft="-100dp" android:layout_marginTop="65dp"/>
            	<EditText android:id="@+id/quantMcSLB" android:layout_height="wrap_content" android:inputType="number" android:layout_marginLeft="0dp" android:layout_marginTop="60dp" android:layout_width="40dp"/>
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
                <ImageView android:layout_width="80dp" android:layout_height="80dp"  android:src="@drawable/hamburgersteak" android:contentDescription="@string/hello_world" android:layout_marginLeft="-50dp"/>
            	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hamburgerSteak" android:layout_marginTop="5dp" android:layout_marginLeft="-30dp" android:textStyle="bold"/>
            	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hello_world" android:layout_marginLeft="-100dp" android:layout_marginTop="65dp"/>
            	<EditText android:id="@+id/quantMcHS" android:layout_height="wrap_content" android:inputType="number" android:layout_marginLeft="0dp" android:layout_marginTop="60dp" android:layout_width="40dp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
                <ImageView android:layout_width="80dp" android:layout_height="80dp" android:src="@drawable/fettuccinialfredo" android:contentDescription="@string/hello_world" android:layout_marginLeft="-50dp"/>
            	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fettuccineAlfredo" android:layout_marginTop="5dp" android:layout_marginLeft="-30dp" android:textStyle="bold"/>
            	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hello_world" android:layout_marginLeft="-100dp" android:layout_marginTop="65dp"/>
            	<EditText android:id="@+id/quantMcFA" android:layout_height="wrap_content" android:inputType="number" android:layout_marginLeft="0dp" android:layout_marginTop="60dp" android:layout_width="40dp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
                <ImageView android:layout_width="80dp" android:layout_height="80dp" android:src="@drawable/basiltomatopasta" android:contentDescription="@string/hello_world" android:layout_marginLeft="-50dp" android:maxWidth="80dp" />
        	    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/basilTomato" android:layout_marginTop="5dp" android:layout_marginLeft="-30dp" android:textStyle="bold"/>
        	    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hello_world" android:layout_marginLeft="-100dp" android:layout_marginTop="65dp"/>
            	<EditText android:id="@+id/quantMcBTP" android:layout_height="wrap_content" android:inputType="number" android:layout_marginLeft="0dp" android:layout_marginTop="60dp" android:layout_width="40dp"/>
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
                
            <Button android:id="@+id/button1" android:layout_width="wrap_content" android:layout_height="50dp" android:text="@string/title_activity_desserts" android:background="#85d8d8d8" android:layout_marginLeft="100dp"/>        
        </TableRow>	
      
    </TableLayout>
	
</ScrollView>
