<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
   
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Starters" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            	<ImageView android:layout_width="100dp" android:layout_height="100dp" android:src="@drawable/bg" android:contentDescription="@string/hello_world"/>
            	<TextView android:layout_width="100dp" android:layout_height="wrap_content" android:text="@string/starter" android:layout_marginTop="5dp" android:layout_marginLeft="10dp" android:textStyle="bold"/>
            	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hello_world" android:layout_marginTop="60dp" android:layout_marginLeft="-70dp"/>
                <EditText android:layout_height="wrap_content" android:layout_width="50dp" android:inputType="number" android:layout_marginLeft="10dp" android:layout_marginTop="60dp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
                <ImageView android:layout_width="100dp" android:layout_height="100dp" android:src="@drawable/bg" android:contentDescription="@string/hello_world"/>
            	<TextView android:layout_width="100dp" android:layout_height="wrap_content" android:text="@string/starter" android:layout_marginTop="5dp" android:layout_marginLeft="10dp" android:textStyle="bold"/>
            	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hello_world" android:layout_marginTop="60dp" android:layout_marginLeft="-70dp"/>
                <EditText android:layout_height="wrap_content" android:layout_width="50dp" android:inputType="number" android:layout_marginLeft="10dp" android:layout_marginTop="60dp"/>        
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
                <ImageView android:layout_width="100dp" android:layout_height="100dp" android:src="@drawable/bg" android:contentDescription="@string/hello_world"/>
            	<TextView android:layout_width="100dp" android:layout_height="wrap_content" android:text="@string/starter" android:layout_marginTop="5dp" android:layout_marginLeft="10dp" android:textStyle="bold"/>
            	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hello_world" android:layout_marginTop="60dp" android:layout_marginLeft="-70dp"/>
                <EditText android:layout_height="wrap_content" android:layout_width="50dp" android:inputType="number" android:layout_marginLeft="10dp" android:layout_marginTop="60dp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
                <ImageView android:layout_width="100dp" android:layout_height="100dp" android:src="@drawable/bg" android:contentDescription="@string/hello_world"/>
        	    <TextView android:layout_width="100dp" android:layout_height="wrap_content" android:text="@string/starter" android:layout_marginTop="5dp" android:layout_marginLeft="10dp" android:textStyle="bold"/>
            	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hello_world" android:layout_marginTop="60dp" android:layout_marginLeft="-70dp"/>
                <EditText android:layout_height="wrap_content" android:layout_width="50dp" android:inputType="number" android:layout_marginLeft="10dp" android:layout_marginTop="60dp"/>
        </TableRow>
        	
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
                <Button android:id="@+id/button2" android:layout_width="wrap_content" android:layout_height="50dp" android:text="@string/welcome" android:background="#85d8d8d8" android:layout_marginLeft="30dp"/>
        		<Button android:id="@+id/button1" android:layout_width="wrap_content" android:layout_height="50dp" android:text="@string/maincourse" android:background="#85d8d8d8" android:layout_marginLeft="50dp"/>        
        </TableRow>
    </TableLayout>
	
</ScrollView>